--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     <title>Movies</title>
 </head>
 <body>
-<main>
-    <div class="movies">
-        <img src="https://image.tmdb.org/t/p/w1280/4Q1n3TwieoULnuaztu9aFjqHDTI.jpg" alt="movie">
-        <div class="movie-info">
-            <h3>Movie Title</h3>
-            <span class="rating">8.4</span>
-        </div>
-    </div>
-</main>
+<main></main>
 
     <script src="app.js"></script>
 </body>
