--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+        <input type="text" id="search" placeholder="Search">
+    </header>
 
     <script src="app.js"></script>
 </body>
