--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <input type="text" id="search" placeholder="Search">
+        <input type="text" id="search" placeholder="Search" class="search">
     </header>
 
     <script src="app.js"></script>
