--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Movies</title>
+    <title>Movie</title>
 </head>
 
 <body>
     <header>
+        <h1 class="logo">Movi<span class="primary-color">Flix</span> </h1>
         <form>
             <input type="text" id="search" placeholder="Search" class="search" />
         </form>
