add search icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <header>
         <h1 class="logo">Movi<span class="primary-color">Flix</span> </h1>
         <form>
-            <input type="text" id="search" placeholder="Search" class="search" />
+            <label class="label">
+                <input type="text" id="search" placeholder="Search" class="search" />
+                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="m16.325 14.899l5.38 5.38a1.008 1.008 0 0 1-1.427 1.426l-5.38-5.38a8 8 0 1 1 1.426-1.426ZM10 16a6 6 0 1 0 0-12a6 6 0 0 0 0 12Z"/></svg>
+            </label>
         </form>
     </header>
     <main></main>
