--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <header>
-        <h1 onClick="window.location.href=window.location.href" class="logo">Movi<span class="primary-color">Flix</span> </h1>
-        <form>
+        <h1 onClick="window.location.href=window.location.href" class="logo">Movi<span class="primary-color">Flix</span>
+        </h1>
+        <form id="from">
             <label class="label">
                 <input type="text" id="search" placeholder="I'm looking for..." class="search" />
                 <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
@@ -23,7 +24,7 @@
             </label>
         </form>
     </header>
-    <main></main>
+    <main id="main"></main>
 
     <script src="app.js"></script>
 </body>
