--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
     <title>Movie</title>
 </head>
 
 <body>
+
     <header>
+        <nav id="nav">
         <h1 onClick="window.location.href=window.location.href" class="logo">Movi<span class="primary-color">Flix</span>
         </h1>
+
+        <ul id="nav-list">
+            <li class="nav-item active">All Movies</li>
+            <li class="nav-item">Favorite Movies</li>
+        </ul>
+
         <form id="from">
             <label class="label">
                 <input type="text" id="search" placeholder="I'm looking for..." class="search" />
@@ -23,38 +34,10 @@
                 </svg>
             </label>
         </form>
+    </nav>
     </header>
 
-    <section class="container">
-        <img src="./img-exemple.jpg" alt="">
-        <div class="info">
-            <div class="primary-info">
-                <h1>Moon Knight</h1>
-                <span class="light-text">(2022)</span>
-            </div>
-            <div class="tertiary">
-                <span>7.4</span>
-                <svg class="bookmark" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
-                    <path fill="currentColor"
-                        d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z" />
-                </svg>
-                <svg class="star" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024">
-                    <path fill="currentColor"
-                        d="m908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5c-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1l-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2c17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9l183.7-179.1c5-4.9 8.3-11.3 9.3-18.3c2.7-17.5-9.5-33.7-27-36.3z" />
-                </svg>
-            </div>
-            <div class="secondary-info">
-                <h3>Overview</h3>
-                <p>When Steven Grant, a mild-mannered gift-shop employee, becomes plagued with blackouts and memories of
-                    another life, he discovers he has dissociative identity disorder and shares a body with mercenary
-                    Marc Spector. As Steven/Marc’s enemies converge upon them, they must navigate their complex
-                    identities while thrust into a deadly mystery among the powerful gods of Egypt.</p>
-            </div>
-
-        </div>
-    </section>
+    <section class="container"></section>
 
     <main id="main"></main>
 
