--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 </head>
 
 <body>
-
     <header>
         <nav id="nav">
-        <h1 onClick="window.location.href=window.location.href" class="logo">Movi<span class="primary-color">Flix</span>
-        </h1>
+            <h1 onClick="window.location.href=window.location.href" class="logo">
+                Movi<span class="primary-color">Flix</span>
+            </h1>
 
-        <ul id="nav-list">
-            <li class="nav-item active">All Movies</li>
-            <li class="nav-item">Favorite Movies</li>
-        </ul>
+            <ul id="nav-list">
+                <li class="nav-item active">All Movies</li>
+                <li class="nav-item">Favorite Movies</li>
+            </ul>
 
-        <form id="from">
-            <label class="label">
-                <input type="text" id="search" placeholder="I'm looking for..." class="search" />
-                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                    <path fill="currentColor" fill-rule="evenodd"
-                        d="m16.325 14.899l5.38 5.38a1.008 1.008 0 0 1-1.427 1.426l-5.38-5.38a8 8 0 1 1 1.426-1.426ZM10 16a6 6 0 1 0 0-12a6 6 0 0 0 0 12Z" />
-                </svg>
-            </label>
-        </form>
-    </nav>
+            <form id="from">
+                <label class="label">
+                    <input type="text" id="search" placeholder="I'm looking for..." class="search" />
+                    <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"
+                        width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                        <path fill="currentColor" fill-rule="evenodd"
+                            d="m16.325 14.899l5.38 5.38a1.008 1.008 0 0 1-1.427 1.426l-5.38-5.38a8 8 0 1 1 1.426-1.426ZM10 16a6 6 0 1 0 0-12a6 6 0 0 0 0 12Z" />
+                    </svg>
+                </label>
+            </form>
+        </nav>
     </header>
 
     <section class="container"></section>
