create genre tags layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </h1>
 
             <ul id="nav-list">
-                <li class="nav-item active">All Movies</li>
+                <li class="nav-item active"> All Movies</li>
                 <li class="nav-item">Favorite Movies</li>
             </ul>
 
@@ -37,9 +37,18 @@
         </nav>
     </header>
 
-    <section class="container"></section>
+    <!-- <section class="container"></section> -->
+    <div class="genres">
+        <div class="tag">Action</div>
+        <div class="tag">Adventure</div>
+        <div class="tag">Drama</div>
+        <div class="tag">Comedy</div>
+
+    </div>
 
     <main id="main"></main>
+
+    
 
     <script src="app.js"></script>
 </body>
