--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </nav>
     </header>
 
-    <!-- <section class="container"></section> -->
-    <div class="genres">
+    <section class="container"></section>
+    <!-- <div id="genres">
         <div class="tag">Action</div>
         <div class="tag">Adventure</div>
         <div class="tag">Drama</div>
         <div class="tag">Comedy</div>
 
-    </div>
+    </div> -->
 
     <main id="main"></main>
 
